--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -26,26 +26,6 @@
 
 	<profiles>
 		<profile>
-			<id>default</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<excludes>
-								<exclude>**/CloudFoundryClientTest.java</exclude>
-								<exclude>**/Abstract*.java</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
 			<id>fast</id>
 			<properties>
 				<maven.test.skip>true</maven.test.skip>
@@ -53,6 +33,19 @@
 		</profile>
 		<profile>
 			<id>integration-test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<includes>
+								<include>**/CloudFoundryClientTest.java</include>
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 
 		<!-- tools classes are needed by byteman, and their path is system-dependent,
@@ -255,6 +248,7 @@
 						<include>**/*Test.java</include>
 					</includes>
 					<excludes>
+						<exclude>**/CloudFoundryClientTest.java</exclude>
 						<exclude>**/Abstract*.java</exclude>
 					</excludes>
 				</configuration>
