Update aws-maven version (old one had issue uploading to spring.io repos)

--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -211,11 +211,11 @@
 
 	<build>
 		<extensions>
-			<extension>
-				<groupId>org.springframework.build.aws</groupId>
-				<artifactId>org.springframework.build.aws.maven</artifactId>
-				<version>3.0.0.RELEASE</version>
-			</extension>
+                        <extension>
+                                <groupId>org.springframework.build</groupId>
+                                <artifactId>aws-maven</artifactId>
+                                <version>4.4.0.RELEASE</version>
+                        </extension>
 		</extensions>
 		<plugins>
 			<plugin>
