--- a/cf-java-client-test-apps/pom.xml
+++ b/cf-java-client-test-apps/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
-	<artifactId>vcap-java-client-test-apps</artifactId>
+	<artifactId>cf-java-client-test-apps</artifactId>
 	<packaging>pom</packaging>
-	<name>vcap-java-client-test-apps</name>
+	<name>Cloud Foundry Java Client test applications</name>
 	<version>0.1.0-BUILD-SNAPSHOT</version>
 
 	<modules>
