--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -102,7 +102,7 @@
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
 			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.2.BUILD-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
