Added support for user-provided service instances in Gradle plugin.

--- a/cloudfoundry-gradle-plugin/build.gradle
+++ b/cloudfoundry-gradle-plugin/build.gradle
@@ -27,7 +27,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.cloudfoundry:cloudfoundry-client-lib:1.0.1'
+    compile 'org.cloudfoundry:cloudfoundry-client-lib:1.0.2.BUILD-SNAPSHOT'
     compile 'org.codehaus.groovy:groovy:2.1.6'
     testCompile 'junit:junit:4.8.2'
 }
