Added test apps to default profile for Travis build.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<modules>
+				<module>cf-java-client-test-apps</module>
 				<module>cloudfoundry-client-lib</module>
 				<module>cloudfoundry-maven-plugin</module>
 			</modules>
