Fixed bug in Gradle plugin with non-String env var keys and values. Fixed displaying of env vars in "cf-env" Gradle task.

--- a/cloudfoundry-gradle-plugin/build.gradle
+++ b/cloudfoundry-gradle-plugin/build.gradle
@@ -63,7 +63,10 @@ if (project.hasProperty('performRelease')) {
     }
 }
 
-def credentials = [userName: deployUser, password: deployPassword]
+def credentials = [ : ]
+if (project.hasProperty('deployUser') && project.hasProperty('deployPassword')) {
+    credentials << [userName: deployUser, password: deployPassword]
+}
 
 uploadArchives {
     repositories {
