--- a/cloudfoundry-maven-plugin/pom.xml
+++ b/cloudfoundry-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cf-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0.2.BUILD-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<name>Cloud Foundry Maven Plugin</name>
 	<url>https://github.com/cloudfoundry/cf-java-client/cloudfoundry-maven-plugin</url>
 
@@ -102,7 +102,7 @@
 		<dependency>
 			<groupId>org.cloudfoundry</groupId>
 			<artifactId>cloudfoundry-client-lib</artifactId>
-			<version>1.0.2.BUILD-SNAPSHOT</version>
+			<version>1.0.2</version>
 		</dependency>
 
 		<dependency>
