--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: java
 install:
 - sudo apt-get install protobuf-compiler
 
-script: cd cloudfoundry-client-lib && mvn -P integration-test clean install -Dccng.target=$TARGET
+script: mvn install -DskipTests=true -B -V && cd cloudfoundry-client-lib && mvn -P integration-test clean install -Dccng.target=$TARGET
   -Dccng.email=$EMAIL -Dccng.passwd=$PASSWD -Dccng.org=$ORG -Dccng.space=$SPACE -Dsurefire.useFile=false
 
 env:
