--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -28,6 +28,7 @@
 	<properties>
 		<spring.framework.version>3.2.2.RELEASE</spring.framework.version>
 		<spring.security.oauth.version>1.0.0.RELEASE</spring.security.oauth.version>
+		<tomcat.version>8.0-SNAPSHOT</tomcat.version>
 		<jetty.version>8.1.12.v20130726</jetty.version>
 		<byteman.version>2.1.3</byteman.version>
 	</properties>
@@ -243,7 +244,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-websocket</artifactId>
-			<version>8.0-SNAPSHOT</version>
+			<version>${tomcat.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
