--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@
 language: java
 
 before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq libprotobuf-dev protobuf-compiler
- 
+ - ./bin/install-protoc.sh
+
 before_script:
 - protoc --version
 
