Fixed inclusion of integration tests classes with integration-test profile.

--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -52,6 +52,9 @@
 							<includes>
 								<include>**/CloudFoundryClientTest.java</include>
 							</includes>
+							<excludes>
+								<exclude>NONE</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 
