--- a/cf-java-client-test-apps/non-ascii-file-name/pom.xml
+++ b/cf-java-client-test-apps/non-ascii-file-name/pom.xml
@@ -8,7 +8,7 @@
     <packaging>war</packaging>
     <version>0.1.0.BUILD-SNAPSHOT</version>
     <properties>
-        <java-version>1.6</java-version>
+        <java-version>1.7</java-version>
         <org.springframework-version>3.2.2.RELEASE</org.springframework-version>
         <org.aspectj-version>1.6.9</org.aspectj-version>
         <org.slf4j-version>1.5.10</org.slf4j-version>
@@ -131,8 +131,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
