--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -27,8 +27,9 @@
 
 	<properties>
 		<java.version>1.7</java.version>
-		<spring.framework.version>3.2.2.RELEASE</spring.framework.version>
-		<spring.security.oauth.version>1.0.0.RELEASE</spring.security.oauth.version>
+		<spring.framework.version>3.2.9.RELEASE</spring.framework.version>
+		<spring.security.oauth.version>1.0.5.RELEASE</spring.security.oauth.version>
+		<jackson.version>1.9.3</jackson.version>
 		<tomcat.version>8.0.8</tomcat.version>
 		<jetty.version>8.1.12.v20130726</jetty.version>
 		<byteman.version>2.1.3</byteman.version>
@@ -237,12 +238,12 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
-			<version>1.6.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.6.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
@@ -259,7 +260,7 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>2.5.0</version>
-		</dependency>			
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
