--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -27,9 +27,9 @@
 
 	<properties>
 		<java.version>1.7</java.version>
-		<spring.framework.version>4.0.0.RELEASE</spring.framework.version>
+		<spring.framework.version>4.0.5.RELEASE</spring.framework.version>
 		<spring.security.oauth.version>2.0.1.RELEASE</spring.security.oauth.version>
-		<jackson.version>1.9.3</jackson.version>
+		<jackson.version>2.3.3</jackson.version>
 		<tomcat.version>8.0.8</tomcat.version>
 		<jetty.version>8.1.12.v20130726</jetty.version>
 		<byteman.version>2.1.3</byteman.version>
@@ -221,7 +221,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.3.1</version>
+			<version>4.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -236,13 +236,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-asl</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
 
