--- a/cf-java-client-test-apps/haash-broker/pom.xml
+++ b/cf-java-client-test-apps/haash-broker/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mattstine</groupId>
+	<groupId>org.cloudfoundry.test</groupId>
 	<artifactId>haash-broker</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0.BUILD-SNAPSHOT</version>
 
 	<name>haash-broker</name>
 	<description>HashMap as a Service (HaaSh) service broker for CF</description>
