--- a/cf-java-client-test-apps/haash-broker/pom.xml
+++ b/cf-java-client-test-apps/haash-broker/pom.xml
@@ -62,7 +62,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.mattstine.cf.haash.Application</start-class>
+		<start-class>org.cloudfoundry.test.haash.Application</start-class>
 		<java.version>1.7</java.version>
 	</properties>
 
