--- a/cloudfoundry-gradle-plugin/build.gradle
+++ b/cloudfoundry-gradle-plugin/build.gradle
@@ -27,7 +27,7 @@ repositories {
 
 dependencies {
     compile gradleApi()
-    compile 'org.cloudfoundry:cloudfoundry-client-lib:1.0.3'
+    compile 'org.cloudfoundry:cloudfoundry-client-lib:1.0.4.BUILD-SNAPSHOT'
     compile 'org.codehaus.groovy:groovy:2.3.6'
     testCompile 'junit:junit:4.8.2'
 }
