--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-client-lib</artifactId>
-	<version>1.1.2.BUILD-SNAPSHOT</version>
+	<version>1.1.2</version>
 	<packaging>jar</packaging>
 	<name>Cloud Foundry Java Client Library</name>
 	<description>A Cloud Foundry client library for Java</description>
@@ -109,13 +109,13 @@
 											<type>war</type>
 											<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
 										</artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.cloudfoundry.test</groupId>
-                                            <artifactId>haash-broker</artifactId>
-                                            <version>0.1.0.BUILD-SNAPSHOT</version>
-                                            <type>jar</type>
-                                            <outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
-                                        </artifactItem>
+										<artifactItem>
+											<groupId>org.cloudfoundry.test</groupId>
+											<artifactId>haash-broker</artifactId>
+											<version>0.1.0.BUILD-SNAPSHOT</version>
+											<type>jar</type>
+											<outputDirectory>${project.build.directory}/generated-test-resources</outputDirectory>
+										</artifactItem>
 									</artifactItems>
 									<stripVersion>true</stripVersion>
 								</configuration>
