--- a/cloudfoundry-gradle-plugin/build.gradle
+++ b/cloudfoundry-gradle-plugin/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 }
 
 group = 'org.cloudfoundry'
-version = '1.1.3'
+version = '1.1.4.BUILD-SNAPSHOT'
 
 // custom tasks for creating source/javadoc jars
 task sourcesJar(type: Jar, dependsOn:classes) {
