--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,27 @@
     <version>2.0.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+    <modules>
+      <module>cloudfoundry-client</module>
+      <module>cloudfoundry-client-spring</module>
+      <module>cloudfoundry-gradle-plugin</module>
+      <module>cloudfoundry-maven-plugin</module>
+      <module>cloudfoundry-resources</module>
+    </modules>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.3</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
