--- a/cloudfoundry-resources/pom.xml
+++ b/cloudfoundry-resources/pom.xml
@@ -33,4 +33,12 @@
     <name>Cloud Foundry Java Resources</name>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>cloudfoundry-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
