--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <rxjava.version>1.0.13</rxjava.version>
+        <rxjava.version>1.0.14</rxjava.version>
         <spring-platform.version>1.1.3.RELEASE</spring-platform.version>
     </properties>
 
@@ -91,7 +91,7 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.3</version>
                     <configuration>
-                        <excludePackageNames>org.cloudfoundry.v3.client.spring.*</excludePackageNames>
+                        <excludePackageNames>org.cloudfoundry.client.spring.*</excludePackageNames>
                         <links>
                             <link>http://reactivex.io/RxJava/javadoc/</link>
                         </links>
