--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <protobuf.version>2.6.1</protobuf.version>
         <reactive-streams.version>1.0.0</reactive-streams.version>
         <reactor.version>2.1.0.BUILD-SNAPSHOT</reactor.version>
         <spring-platform.version>1.1.3.RELEASE</spring-platform.version>
@@ -47,6 +48,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.projectreactor</groupId>
                 <artifactId>reactor-stream</artifactId>
@@ -89,11 +95,10 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.3</version>
                     <configuration>
-                        <excludePackageNames>org.cloudfoundry.client.spring.*</excludePackageNames>
                         <links>
-                            <!-- TODO: Need to update to reactive-streams-->
-                            <link>http://reactivex.io/RxJava/javadoc/</link>
+                            <link>http://www.reactive-streams.org/reactive-streams-1.0.0-javadoc/</link>
                         </links>
+                        <quiet>true</quiet>
                     </configuration>
                     <executions>
                         <execution>
