--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,17 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <rxjava.version>1.0.14</rxjava.version>
+        <reactive-streams.version>1.0.0</reactive-streams.version>
+        <reactor.version>2.1.0.BUILD-SNAPSHOT</reactor.version>
         <spring-platform.version>1.1.3.RELEASE</spring-platform.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>io.reactivex</groupId>
-                <artifactId>rxjava</artifactId>
-                <version>${rxjava.version}</version>
+                <groupId>io.projectreactor</groupId>
+                <artifactId>reactor-stream</artifactId>
+                <version>${reactor.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.spring.platform</groupId>
@@ -57,6 +58,11 @@
                 <version>${spring-platform.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.reactivestreams</groupId>
+                <artifactId>reactive-streams</artifactId>
+                <version>${reactive-streams.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -85,6 +91,7 @@
                     <configuration>
                         <excludePackageNames>org.cloudfoundry.client.spring.*</excludePackageNames>
                         <links>
+                            <!-- TODO: Need to update to reactive-streams-->
                             <link>http://reactivex.io/RxJava/javadoc/</link>
                         </links>
                     </configuration>
@@ -117,33 +124,18 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>aggregate</id>
-                        <goals>
-                            <goal>aggregate-jar</goal>
-                        </goals>
-                        <configuration>
-                            <groups>
-                                <group>
-                                    <title>Core API</title>
-                                    <packages>org.cloudfoundry.client*</packages>
-                                </group>
-                                <group>
-                                    <title>Spring-Based Implementation</title>
-                                    <packages>org.cloudfoundry.client.spring</packages>
-                                </group>
-                            </groups>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <profiles>
         <profile>
