Integration Test Improvements
This change updates the integration test code so that it compiles
without warnings.  It also updates the CI scripts towards getting a
successful build.

--- a/ci/integration-test.yml
+++ b/ci/integration-test.yml
@@ -4,6 +4,14 @@ image: docker:///java#8-jdk
 
 inputs:
 - name: cf-java-client
+- name: connection
 
 run:
   path: cf-java-client/ci/integration-test.sh
+
+params:
+  TEST_ORGANIZATION:
+  TEST_PASSWORD:
+  TEST_SKIPSSLVALIDATION:
+  TEST_SPACE:
+  TEST_USERNAME:
